Fixed alignment of days in datepicker that looked missaligned on iPhone and iPad

--- a/src/components/form/date/date.scss
+++ b/src/components/form/date/date.scss
@@ -142,6 +142,7 @@
           border: 2px solid transparent;
           background-color: transparent;
           font-size: inherit;
+          padding: 0;
 
           &:hover {
             background-color: colors.$blue-dark;
